#18 removes the usages of jaxb stuff in favor of apache commons codec. adds test case